--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../exported_games/The Green Game.exe"
+export_path="../../../../../Other programs/Godot_v3.5.1-stable_win64.exe/godot3-5-1-exports/green_game_vr/The Green Game VR.exe"
 script_export_mode=1
 script_encryption_key=""
 
